# CppNetwork

./: CMakeLists.txt
CNet/: CMakeLists.txt
CNet/src/: Constants.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IncludeFile.cpp  IncludeFile.h  Network.cpp  Network.h  PResult.h  Socket.cpp  Socket.h  SocketHandle.h  TCPSocket.cpp  TCPSocket.h  TCPSocketOption.h  UDPSocket.cpp  UDPSocket.h
Client/: CMakeLists.txt
Client/src/: main.cpp
HTTP_Server/: CMakeLists.txt
HTTP_Server/certificates/: cert.pem  key.pem
HTTP_Server/public/: index.html
HTTP_Server/src/: HTTPS_Server.h  HTTP_Server.h  Request.h  Response.h  main.cpp
Server/: CMakeLists.txt
Server/src/: main.cpp
